--- a/schedule/index.html
+++ b/schedule/index.html
@@ -51,9 +51,9 @@
     <div class="sponsor-wrapper schedule-wrapper">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h2>Design Like Mad 2014 Schedule</h2>
+                <h2>Design Like Mad 2015 Schedule</h2>
                 <p>
-                    Design Like Mad is <strong>Saturday, September 27th</strong> from <strong>9am-9pm</strong> at the <strong>Madison Public Library: Central Library</strong>. The following are more details about the event.
+                    Design Like Mad is <strong>Saturday, April 23rd</strong> from <strong>9am-9pm</strong> at the <strong>Madison Public Library: Central Library</strong>. The following are more details about the event.
                     <br />
                     <br /> Design Like Mad Schedule of Events
                     <br />
@@ -116,12 +116,11 @@
                     <br />
                     <strong>Final Presentations</strong>
                     <br />
-                    <br /> After a long day of hard work relax and have some drinks supplied by 4-Quartar. Non profit coordinators and members will join us to celebrate the accomplishments of all the designers.
-                    <br />
+                
                     <br />
                     <strong>Questions</strong>
                     <br />
-                    <br /> If you have any additional questions regarding the event please contact Abby (abby@designlikemad.org)
+                    <br /> If you have any additional questions regarding the event please contact Kate (kate@designlikemadmsn.org)
                     <br />
                     <br />
                     </pclass>
