--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </nav>
     <div class="row hero-image">
         <!-- <img src="/images/header-image.png" /> -->
+        <div id="getting-started"></div> 
     </div>
     <div class="map-wrapper" id="about">
         <div class="row">
@@ -163,16 +164,7 @@
                 <button onclick="window.location.href='/applications/designer_application.html'">Web/Graphic Designers</button>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-4 col-sm-offset-4">
-                <button onclick="window.location.href = '/applications/designer_application.html'">Interior Designers</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4 col-sm-offset-4">
-                <button onclick="window.location.href = '/applications/designer_application.html'">Architects</button>
-            </div>
-        </div>
+        
         <div class="row">
             <div class="col-sm-4 col-sm-offset-4">
                 <button onclick="window.location.href = '/applications/developer_application.html'">Developers</button>
@@ -224,6 +216,7 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/lightbox.js"></script>
+    <script src="/js/jquery.countdown.min.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -256,6 +249,14 @@
         }
     });
     </script>
+    <script type="text/javascript">
+    $("#getting-started")
+    .countdown("2016/04/23", function(event) {
+    $(this).html(
+        '<div class="counter">' + event.strftime('%w') + '<br /> Weeks' + '</div>' + '<div class="counter">' + event.strftime(' %-d') + '<br /> Days' + '</div>' + '<div class="counter">' + event.strftime('%-H') + '<br /> Hours' +  '</div>' + '<div class="counter">' + event.strftime('%M') + '<br /> Minutes' + '</div>'  + '<div class="counter">' + event.strftime('%S') + '<br /> Seconds' + '</div>'
+        );
+    });
+     </script>
 </body>
 
 </html>
