--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="col-sm-6">
                     <div class="join-box">
                         <h4>4. Design Like Mad!</h4>
-                        <p>The event starts at September 27th at 9:00am. You can show up at the library starting at 8:30am. Designers will have 9 hours to complete as much of their project as possible. 3 meals, raffles, an after party will be provided throughout the day as a thank you for your awesome work! </p>
+                        <p>The event starts on Saturday, April 23rd at 9:00am. You can show up at the library starting at 8:30am. Designers will have 9 hours to complete as much of their project as possible. 3 meals, raffles, an after party will be provided throughout the day as a thank you for your awesome work! </p>
                     </div>
                 </div>
             </div>
