updated all applications

--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
                 <button onclick="window.location.href = '/applications/developer_application.html'">Developers</button>
             </div>
         </div>
-        <div class="row">
+       <!--  <div class="row">
             <div class="col-sm-4 col-sm-offset-4">
                 <button onclick="window.location.href = '/applications/volunteer_application.html'">Volunteers</button>
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="row email-wrapper">
         <div class="col-sm-4 col-sm-offset-4">
