--- a/applications/non-profit.html
+++ b/applications/non-profit.html
@@ -65,12 +65,9 @@
     <div class="row application-wrapper">
         <div class="col-sm-10 col-sm-offset-1">
             <h2>Non Profit Application</h2>
-            <p><strong>Design Like Mad will begin accepting applications March 1st. Please check back later.</strong></p>
-            <!--<p><strong>Applications are due August 29th, midnight. <!-- Due to a large volume of applications this year, late submissions will not be accepted.</strong></p>
-            <p>Design Like Mad gives deserving, local non-profit organizations access to pro-bono design help from professional designers and design students.  Last year 60 Design Like Mad designers and developers completed projects for 21 non-profits in 12 hours.  Teams included graphic designers, web designers and developers, architects, and interior designers (<a href="/projects">view last year's projects</a>).</p>
-            <p><strong>Designers and developers are required to attend a pre-planning meeting on the evening of Wednesday, September 27th (Time TBD), and the event on Saturday, September 27th from 9am - 9pm.</strong></p>
-            <iframe id="JotFormIFrame" onload="window.parent.scrollTo(0,0)" allowtransparency="true" src="http://form.jotformpro.com/form/42154027241948" frameborder="0" style="width:100%; height:1901px; border:none;" scrolling="no"></iframe>
-            <script type="text/javascript">window.handleIFrameMessage = function (e) { var args = e.data.split(":"); var iframe = document.getElementById("JotFormIFrame"); if (!iframe) return; switch (args[0]) { case "scrollIntoView": iframe.scrollIntoView(); break; case "setHeight": iframe.style.height = args[1] + "px"; break; } }; if (window.addEventListener) { window.addEventListener("message", handleIFrameMessage, false); } else if (window.attachEvent) { window.attachEvent("onmessage", handleIFrameMessage); }</script>
+            <!--<p><strong>Design Like Mad will begin accepting applications March 1st. Please check back later.</strong></p>-->
+           
+        
            <p><strong>Applications are due July 25th at 5pm.</strong></p>
                 <p>Design Like Mad gives deserving, local non-profit organizations access to pro-bono design help from professional designers and design students.  Last year 60 Design Like Mad designers and developers completed projects for 21 non-profits in 12 hours.  Teams included graphic designers, web designers and developers, architects, and interior designers (view last year's projects).<br /><br />
 
@@ -94,7 +91,8 @@
                 Organizations chosen to participate will be announced on August 4th.  Design teams will be announced on September 5th.
                 <br /><br />
                 By submitting an application to Design Like Mad, you agree to our <a href="/DesignLikeMadAgreements.pdf" target="_blank">Talent and Work Release Agreements.</a>
-            </p>-->
+            </p>
+            <iframe src="https://docs.google.com/forms/d/1bRDR0P6il0BGXil2H4F0RqvoHp0yy_MWIV-TEp7wO7Y/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
         </div>
     </div>
