updated due date

--- a/applications/non-profit.html
+++ b/applications/non-profit.html
@@ -68,7 +68,7 @@
             <!--<p><strong>Design Like Mad will begin accepting applications March 1st. Please check back later.</strong></p>-->
            
         
-           <p><strong>Applications are due Friday, April 5th at midnight.</strong></p>
+           <p><strong>Applications are due Friday, April 1st at midnight.</strong></p>
                 <p>Design Like Mad gives deserving, local non-profit organizations access to pro-bono design help from professional designers and design students.  Last year 60 Design Like Mad designers and developers completed projects for 21 non-profits in 12 hours.  Teams included graphic designers, web designers and developers, architects, and interior designers (view last year's projects).<br /><br />
 
                 Organizations will be chosen based on their needs, type of project, willingness to implement the final product, and positive impact on the community. Any Madison non-profit is eligible, <strong>except for partisan political and religious organizations.</strong><br /><br />
