--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -72,18 +72,12 @@
         </div> -->
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="row">
-                    <div class="col-sm-12 secondary-sponsers">
-                        <h2>National Sponsor</h2>
-                        <a href="http://www.900dpi.com" target="_blank"><img src="/images/900dpi.png" /></a>
-                    </div>
-                </div>
                 <div class="row second-sponsor">
                     <div class="col-sm-12">
                         <h2>Gold Sponsors</h2>
                     </div>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-sm-6">
                         <a href="https://www.nglic.com/" target="_blank" class="gold-sponsors"><img src="/images/ngl.png" /></a>
                     </div>
@@ -98,12 +92,8 @@
                     <div class="col-sm-6">
                         <a href="http://screendoorprinting.com/S1.htm" target="_blank" class="gold-sponsors"><img src="/images/willyst.jpg" /></a>
                     </div>
-                </div>
-                <div class="row gold-second-row">
-                    <div class="col-sm-6">
-                        <a href="http://screendoorprinting.com/S1.htm" target="_blank" class="gold-sponsors"><img src="/images/ians_large.png" id="ians" /></a>
-                    </div>
-                </div>
+                </div> -->
+                
                 <div class="row second-sponsor">
                     <div class="col-sm-12">
                         <h2>Silver Sponsors</h2>
@@ -113,25 +103,14 @@
                     <div class="col-sm-4 secondary-sponsors">
                         <a href="http://www.gospruce.com/" target="_blank"><img src="/images/spruce.png" /></a>
                     </div>
-                    <div class="col-sm-4 secondary-sponsors">
+                    <!-- <div class="col-sm-4 secondary-sponsors">
                         <a href="http://www.drawski.com/" target="_blank"><img src="/images/drawski.png" /></a>
-                    </div>
+                    </div> -->
                     <div class="col-sm-4 secondary-sponsers">
                         <a href="http://www.madisonpubliclibrary.org/" target="_blank"><img src="/images/mpl.png" /></a>
                     </div>
                 </div>
-                <div class="row second-row">
-                    <div class="col-sm-4 secondary-sponsors">
-                        <a href="http://icandy-graphics.com/" target="_blank"><img src="/images/icandy.png" /></a>
-                    </div>
-                    <div class="col-sm-4 secondary-sponsors">
-                        <a href="http://madisontrafficgarden.org/" target="_blank"><img src="/images/mtg_logo.png" /></a>
-                    </div>
-                    <div class="col-sm-4 secondary-sponsors">
-                        <a href="http://ianspizza.com/" target="_blank"><img src="/images/suprtanet.png" /></a>
-                    </div>
-                </div>
-                <div class="row second-row">
+                                <div class="row second-row">
                     <div class="col-sm-4 secondary-sponsors">
                         <a href="http://www.thebrinklounge.com/" target="_blank"><img src="/images/brink.png" /></a>
                     </div>
@@ -142,17 +121,7 @@
                         <a href="http://www.musicnotes.com" target="_blank"><img src="/images/ionic.png" /></a>
                     </div>
                 </div>
-                <div class="row second-row">
-                    <div class="col-sm-4 secondary-sponsors">
-                        <a href="http://www.milios.com/" target="_blank"><img src="/images/milios.jpg" /></a>
-                    </div>
-                    <div class="col-sm-4 secondary-sponsors">
-                        <a href="http://www.madworkscoworking.org/" target="_blank"><img src="/images/madworks.png" /></a>
-                    </div>
-                    <div class="col-sm-4 secondary-sponsors">
-                        <a href="http://squashworkshop.com/" target="_blank"><img src="/images/squash.jpg" /></a>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
