updates to spnosors

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -110,7 +110,7 @@
                         <a href="http://www.madisonpubliclibrary.org/" target="_blank"><img src="/images/mpl.png" /></a>
                     </div>
                 </div>
-                                <div class="row second-row">
+                                <!-- <div class="row second-row">
                     <div class="col-sm-4 secondary-sponsors">
                         <a href="http://www.thebrinklounge.com/" target="_blank"><img src="/images/brink.png" /></a>
                     </div>
@@ -121,7 +121,7 @@
                         <a href="http://www.musicnotes.com" target="_blank"><img src="/images/ionic.png" /></a>
                     </div>
                 </div>
-                
+                 -->
             </div>
         </div>
     </div>
