sponsors and dates

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <div class="col-sm-6">
                     <div class="join-box">
                         <h4>1. Fill Out An Application</h4>
+                        <h4 class="dates">Due by April 1st at Midnight</h4>
                         <p>If you want to join Design Like Mad, first you have to fill out an application. Applications are short forms so we can get to know you better. Anyone and everyone is welcome to apply! That means professional designers, student designers, and non-profts.<strong>Spots are limited, so make sure to fill out an application soon!</strong></p>
                         <button onclick="window.location.href='/index.html#join'" class="join-button">Join Today!</button>
                     </div>
@@ -101,6 +102,7 @@
                 <div class="col-sm-6">
                     <div class="join-box">
                         <h4>3. Scope out the project</h4>
+                        <h4 class="dates">Wednesday April 13th, 6-9pm</h4>
                         <p><strong>Teams will meet 1 week prior to the event for a Networking/Project Planning Kickoff Bash!</strong> Refreshments will be provided as teams get together and scope out projects with their non-profit representative. No work will be completed at pre-planning meeting, teams will decide on a plan of action for the Design Like Mad event so they are prepared to start work immediately on the day of the event. <strong>This meeting is mandatory for all participants and non-profit representatives.</strong>
                         </p>
                     </div>
@@ -108,6 +110,7 @@
                 <div class="col-sm-6">
                     <div class="join-box">
                         <h4>4. Design Like Mad!</h4>
+                        <h4 class="dates">Wednesday April 23rd, 9am</h4>
                         <p>The event starts on Saturday, April 23rd at 9:00am. You can show up at the library starting at 8:30am. Designers will have 9 hours to complete as much of their project as possible. 3 meals, raffles, an after party will be provided throughout the day as a thank you for your awesome work! </p>
                     </div>
                 </div>
