--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -103,25 +103,25 @@
                     <div class="col-sm-4 secondary-sponsors">
                         <a href="http://www.gospruce.com/" target="_blank"><img src="/images/spruce.png" /></a>
                     </div>
-                    <!-- <div class="col-sm-4 secondary-sponsors">
-                        <a href="http://www.drawski.com/" target="_blank"><img src="/images/drawski.png" /></a>
-                    </div> -->
+                     <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://www.sprout-studio.com" target="_blank"><img src="/images/sprout.png" /></a>
+                    </div> 
                     <div class="col-sm-4 secondary-sponsers">
                         <a href="http://www.madisonpubliclibrary.org/" target="_blank"><img src="/images/mpl.png" /></a>
                     </div>
                 </div>
-                                <!-- <div class="row second-row">
+                 <div class="row second-row">
                     <div class="col-sm-4 secondary-sponsors">
-                        <a href="http://www.thebrinklounge.com/" target="_blank"><img src="/images/brink.png" /></a>
+                        <a href="http://www.smpstudios.com/" target="_blank"><img src="/images/smp.jpg" /></a>
                     </div>
-                    <div class="col-sm-4 secondary-sponsors">
+                    <!--<div class="col-sm-4 secondary-sponsors">
                         <a href="http://www.musicnotes.com" target="_blank"><img src="/images/musicnotes.png" /></a>
                     </div>
                     <div class="col-sm-4 secondary-sponsors">
                         <a href="http://www.musicnotes.com" target="_blank"><img src="/images/ionic.png" /></a>
-                    </div>
+                    </div>-->
                 </div>
-                 -->
+                
             </div>
         </div>
     </div>
