closed applications fixed typo

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="col-sm-6">
                     <div class="join-box">
                         <h4>4. Design Like Mad!</h4>
-                        <h4 class="dates">Wednesday April 23rd, 9am</h4>
+                        <h4 class="dates">Saturday April 23rd, 9am</h4>
                         <p>The event starts on Saturday, April 23rd at 9:00am. You can show up at the library starting at 8:30am. Designers will have 9 hours to complete as much of their project as possible. 3 meals, raffles, an after party will be provided throughout the day as a thank you for your awesome work! </p>
                     </div>
                 </div>
@@ -154,10 +154,10 @@
     <div class="join-wrapper" id="join">
         <div class="row">
             <div class="col-sm-12">
-                <h2>Join in on the fun!</h2>
+                <h2>Applications are closed for 2016. We hope to see you at the event on Saturday, April 23rd!</h2>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-sm-4 col-sm-offset-4">
                 <button onclick="window.location.href='/applications/non-profit.html'">Non-Profits</button>
             </div>
@@ -172,7 +172,7 @@
             <div class="col-sm-4 col-sm-offset-4">
                 <button onclick="window.location.href = '/applications/developer_application.html'">Developers</button>
             </div>
-        </div>
+        </div> -->
        <!--  <div class="row">
             <div class="col-sm-4 col-sm-offset-4">
                 <button onclick="window.location.href = '/applications/volunteer_application.html'">Volunteers</button>
