--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -77,22 +77,19 @@
                         <h2>Gold Sponsors</h2>
                     </div>
                 </div>
-                <!-- <div class="row">
+                <div class="row">
                     <div class="col-sm-6">
-                        <a href="https://www.nglic.com/" target="_blank" class="gold-sponsors"><img src="/images/ngl.png" /></a>
+                        <a href="https://wisconsin.aiga.org/" target="_blank" class="gold-sponsors"><img src="/images/aiga.png" /></a>
                     </div>
-                    <div class="col-sm-6">
-                        <a href="http://www.blendimc.com/" target="_blank" class="gold-sponsors"><img src="/images/blend.png" /></a>
+                                        <div class="col-sm-6">
+                        <a href="https://www.portalmedia.com/" target="_blank" class="gold-sponsors"><img src="/images/portal.png" /></a>
                     </div>
                 </div>
                 <div class="row gold-second-row">
                     <div class="col-sm-6">
-                        <a href="http://screendoorprinting.com/S1.htm" target="_blank" class="gold-sponsors"><img src="/images/screen_door.png" /></a>
+                        <a href="http://www.spredfast.com" target="_blank" class="gold-sponsors"><img src="/images/spredfast.svg" /></a>
                     </div>
-                    <div class="col-sm-6">
-                        <a href="http://screendoorprinting.com/S1.htm" target="_blank" class="gold-sponsors"><img src="/images/willyst.jpg" /></a>
-                    </div>
-                </div> -->
+                </div>
                 
                 <div class="row second-sponsor">
                     <div class="col-sm-12">
@@ -114,12 +111,20 @@
                     <div class="col-sm-4 secondary-sponsors">
                         <a href="http://www.smpstudios.com/" target="_blank"><img src="/images/smp.jpg" /></a>
                     </div>
-                    <!--<div class="col-sm-4 secondary-sponsors">
-                        <a href="http://www.musicnotes.com" target="_blank"><img src="/images/musicnotes.png" /></a>
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://adorable.io/" target="_blank"><img src="/images/adorable.png" /></a>
                     </div>
                     <div class="col-sm-4 secondary-sponsors">
-                        <a href="http://www.musicnotes.com" target="_blank"><img src="/images/ionic.png" /></a>
-                    </div>-->
+                        <a href=" https://www.dunkindonuts.com/content/dunkindonuts/en.html" target="_blank"><img src="/images/dunkin.png" /></a>
+                    </div>
+                </div>
+                <div class="row second-row">
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="http://thinkinkanddesign.com/" target="_blank"><img src="/images/think.jpg" /></a>
+                    </div>
+                    <div class="col-sm-4 secondary-sponsors">
+                        <a href="https://www.willystreet.coop/" target="_blank"><img src="/images/willy.png" /></a>
+                    </div>
                 </div>
                 
             </div>
