added eat street logo

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -125,6 +125,9 @@
                     <div class="col-sm-4 secondary-sponsors">
                         <a href="https://www.willystreet.coop/" target="_blank"><img src="/images/willy.png" /></a>
                     </div>
+                     <div class="col-sm-4 secondary-sponsors">
+                        <a href="https://eatstreet.com/" target="_blank"><img src="/images/EatStreet_Vector.jpg" /></a>
+                    </div>
                 </div>
                 
             </div>
